<resources>
    <string name="app_name">The Helping Hand</string>
    <string name="permission_rationale_title">Permission Required</string>
    <string name="permission_rationale_camera">Camera permission is required to enable the camera</string>
    <string name="permission_rationale_Audio">Audio permission is required to Speach to text translation</string>
    <string name="preview">Preview</string>
    <string name="preview_off">Preview Off</string>
    <string name="preview_on">Preview On</string>
    <string name="singleshot">Singleshot</string>
    <string name="singleshot_on">Singleshot on</string>
    <string name="singleshot_off">Singleshot off</string>
    <string name="start_single_detection">Detect</string>
    <string name="deaf">Deaf</string>
    <string name="blind">Blind</string>
    <string name="dumb">Dumb</string>
    <string name="recognize_microphone">Start</string>
    <string name="stop_microphone">Stop</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready To Listen \n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>

</resources>
