<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="119dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnpanel"
        android:layout_width="242dp"
        android:layout_height="224dp"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <Button
            android:id="@+id/singledetection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbtn"
            android:elevation="10dp"
            android:text="@string/start_single_detection"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch1"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:drawingCacheQuality="high"
            android:elevation="10dp"
            android:hapticFeedbackEnabled="true"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sb_background="#03A9F4"
            app:sb_checked="false"
            app:sb_checked_color="#03A9F4"
            app:sb_effect_duration="100"
            app:sb_enable_effect="true"
            app:sb_show_indicator="false"
            app:sb_uncheck_color="#03A9F4" />

        <TextView
            android:id="@+id/statustxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Start"
            android:textAllCaps="true"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/switchCam"
            android:layout_width="129dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:shadowColor="#000000"
            android:text="Switch Camera"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cameraControls"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />

        <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
            android:id="@+id/cameraControls"
            android:layout_width="173dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchCam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tbgChildSpacing="auto">

            <com.nex3z.togglebuttongroup.button.LabelToggle
                android:id="@+id/previewbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/preview"
                android:textOff="@string/preview_off"
                android:textOn="@string/preview_on"
                android:textSize="12sp" />

            <com.nex3z.togglebuttongroup.button.LabelToggle
                android:id="@+id/singleshot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/singleshot"
                android:textOff="@string/singleshot_off"
                android:textOn="@string/singleshot_on"
                android:textSize="12sp" />

        </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>