<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectType">

    <Button
        android:id="@+id/deafbtn"
        android:layout_width="200dp"
        android:layout_height="82dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="91dp"
        android:background="@drawable/button"
        android:text="@string/deaf"
        android:textAllCaps="false"
        android:textColor="#FFFBFB"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/dumbimg"
        app:layout_constraintEnd_toStartOf="@+id/deafimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blindimg" />

    <Button
        android:id="@+id/blindbtn"
        android:layout_width="200dp"
        android:layout_height="82dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/button"
        android:text="@string/blind"
        android:textAllCaps="false"
        android:textColor="#FFFBFB"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/deafimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/blindimg"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dumbbtn"
        android:layout_width="200dp"
        android:layout_height="82dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="111dp"
        android:background="@drawable/button"
        android:text="@string/dumb"
        android:textAllCaps="false"
        android:textColor="#FFFBFB"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dumbimg"
        app:layout_constraintTop_toBottomOf="@+id/deafimg" />

    <ImageView
        android:id="@+id/blindimg"
        android:layout_width="153dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toTopOf="@+id/deafbtn"
        app:layout_constraintEnd_toStartOf="@+id/blindbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_t1" />

    <ImageView
        android:id="@+id/deafimg"
        android:layout_width="149dp"
        android:layout_height="151dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toTopOf="@+id/dumbbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deafbtn"
        app:layout_constraintTop_toBottomOf="@+id/blindbtn"
        app:srcCompat="@drawable/ic_t2" />

    <ImageView
        android:id="@+id/dumbimg"
        android:layout_width="164dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dumbbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deafbtn"
        app:srcCompat="@drawable/ic_t3" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="39dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/deafimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blindimg" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/dumbimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deafimg" />
</androidx.constraintlayout.widget.ConstraintLayout>
